# Trefftz_EPW

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
Trefftz_EPW_2D/: __init__.py  analytic.py  assembly.py  core.py  helpers.py  mesh_utils.py  meshing.py  pw_utils.py  quadrature.py  solver.py
tests/: test_analytic.py  test_assembly.py  test_core.py  test_helpers.py  test_mesh_utils.py  test_pw_utils.py  test_quadrature.py  test_solver.py
