[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Trefftz-EPW-2D"
version = "0.1.1"
description = "Plane-wave DG solver for 2D disk scattering"
authors = [{name="Ben Latham", email="blatham@ucmerced.edu"}]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
  "numpy",
  "scipy",
  "meshio",
  "gmsh",
  "pypardiso",
  "joblib"
]
[project.scripts]
trefftzdg = "Trefftz_EPW_2D.core:main"

[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100
ignore = ["E203", "W503"]
exclude = ["build", "dist", "__pycache__"]
