[bumpversion]
current_version = 0.1.1
commit = True
tag = True

[flake8]
max-line-length = 100
ignore = E203, W503
exclude = 
	.git
	__pycache__
	build
	dist
	Tests
	.pw_cache
	pw_cache

[options]
packages = find:

[options.packages.find]
exclude = 
	Tests

[bumpversion:file:pyproject.toml]
search = version = "{current_version}"
replace = version = "{new_version}"
